# ios-hdri-capture

./: .gitignore  README.md  project.yml
Sources/HDRICapture/: ARCaptureViewModel.swift  ARPreviewView.swift  ActivityView.swift  CaptureExportBundle.swift  ContentView.swift  EnvironmentProbeSnapshot.swift  HDRICaptureApp.swift  HighResolutionFrameCapture.swift  SphericalAlignmentSnapshot.swift  SphericalCaptureExport.swift  SphericalCaptureSession.swift
docs/: exposure-consistency.md  project-plan.md
rust/hdri_encoder/: Cargo.toml  build.rs
rust/hdri_encoder/src/: hdri_encoder.udl  lib.rs
scripts/: build-rust-ios.sh  generate-uniffi-swift.sh
